<resources>
    <string name="app_name">You17</string>
    <string name="main_vip">VIP充值</string>
    <string name="mine_consumption">消费记录</string>
    <string name="mine_top_up">充值</string>
    <string name="mine_subscribe">我的订阅</string>
    <string name="main_feedback">问题反馈</string>
    <string name="mine_author">成为作者</string>
    <string name="mine_sign">签到</string>
    <string name="mine_game">游戏</string>
    <string name="mine_us">关于我们</string>
    <string name="mine_log">点击登入</string>
    <string name="mine_log_in_title">登录后可以使用书架功能呦</string>

    <string name="Check_your_private_information">,   查看你的私密信息</string>
    <string name="Please_login">请登录后</string>
    <string name="What_also_have">什么也木有啊 ,  哭晕在厕所</string>

    <string name="setup">设置</string>
    <string name="setup_update">漫画更新提醒</string>
    <string name="setup_recommended">漫画推荐提醒</string>
    <string name="setup_cache">清除缓存</string>
    <string name="setup_storage">储存设置</string>
    <string name="setup_within">内置储存空间</string>
    <string name="setup_outside">外置储存空间</string>
    <string name="wifi">WIFI自动下载</string>
    <string name="setup_environment">网络环境提示</string>
    <string name="setup_wifi">非WIFI环境使用</string>
    <string name="ranking">排名</string>
    <string name="signing">签约</string>
    <string name="project">专题</string>
    <string name="animation">动画</string>
    <string name="The_s_class_works_recommended"><![CDATA[原S级作品推荐]]></string>
    <string name="Strongly_recommend_works">强力推荐作品</string>
    <string name="search_authors"> 漫画名 | 作者</string>
    <string name="Please_input_search_content">请输入搜索内容</string>
    <string name="Top_search">热门搜索</string>
    <string name="search_update">更新</string>
    <string name="search_type">类型</string>
    <string name="anking">排行榜</string>
    <string name="ticket">月票</string>
    <string name="lin">|</string>
    <string name="Top_up_demon_money">充值妖气币</string>
    <string name="Prepaid_phone_number">请选择充值数量</string>
    <string name="Pay_treasure">支付宝</string>
    <string name="WeChat_pay">微信支付</string>
    <string name="Confirm_prepaid_phone">确认充值</string>
    <string name="Please_select_payment_method">请选择支付方式</string>
    <string name="subscription">付费订阅</string>
    <string name="GanJinDing">您还没有订阅漫画哦</string>
    <string name="Enter_subscription_channel">进入订阅频道观赏订阅漫画</string>
    <string name="singning">人气签约</string>

    <string name="Recommend_title">热门推荐</string>

    <string name="alltop">全部专题</string>
    <string name="top_open">开学季</string>
    <string name="_2016_08_30">2016-08-30至今</string>
    <string name="top_item">队长 , 到底部了呦</string>
    <string name="top_all">全部专题</string>
    <string name="top_commic">漫画推荐</string>
    <string name="top_space">次元空间</string>
    <string name="sing_update">更新</string>
    <string name="sing_ticket">月票</string>
    <string name="sing_click">点击</string>
    <string name="sing_young">少年</string>
    <string name="sing_gril">少女</string>
    <string name="Click_on_the_quantity">总点击:</string>
    <string name="Ten_thousand">万</string>


</resources>
