<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
                android:background="@color/white"

                android:padding="@dimen/homeTen"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/top_pop_all"
            android:paddingLeft="@dimen/homeTen"
            android:paddingRight="@dimen/homeTen"
            android:paddingTop="@dimen/homeTen"
            android:paddingBottom="@dimen/homeTen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/top_all"/>

        <TextView
            android:paddingLeft="@dimen/homeTen"
            android:paddingRight="@dimen/homeTen"
            android:id="@+id/top_pop_comm"
            android:paddingTop="@dimen/homeTen"
            android:paddingBottom="@dimen/homeTen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/top_commic"/>

        <TextView
            android:paddingLeft="@dimen/homeTen"
            android:paddingRight="@dimen/homeTen"
            android:id="@+id/top_pop_space"
            android:paddingTop="@dimen/homeTen"
            android:paddingBottom="@dimen/homeTen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/top_space"/>

    </LinearLayout>


</RelativeLayout>