<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20sp">

        <ImageView
            android:id="@+id/subscribe_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/toolbar_back_pressed"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/subscription"
            android:textSize="20sp"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/homeOne"
        android:background="@color/colorLineAsh"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/icon_loading_empty"
            android:layout_marginBottom="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/GanJinDing"
            android:layout_centerHorizontal="true"
            android:background="@mipmap/icon_loading_empty"/>

        <TextView
            android:id="@+id/GanJinDing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/GanJinDing"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/GanJinDing"
            android:background="@drawable/subscription_shape"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:layout_marginTop="50sp"
            android:padding="15sp"
            android:text="@string/Enter_subscription_channel"/>
    </RelativeLayout>
</LinearLayout>