<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!--.................1......................................-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/setup"/>
            </LinearLayout>
            <!--..................2.....................................-->
            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#ffffff"
                    android:orientation="vertical"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="6dp"
                            android:text="@string/setup_update"/>

                        <com.cl.view.widget.SwitchView
                            android:layout_width="50dp"
                            android:layout_height="20dp"
                            android:layout_alignParentRight="true"/>
                    </RelativeLayout>
                    <!--....................................-->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#ededed"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="6dp"
                            android:text="@string/setup_recommended"/>

                        <com.cl.view.widget.SwitchView
                            android:layout_width="50dp"
                            android:layout_height="20dp"
                            android:layout_alignParentRight="true"/>
                    </RelativeLayout>
                    <!--....................................-->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#ededed"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="6dp"
                            android:text="@string/setup_cache"/>


                    </RelativeLayout>
                    <!--....................................-->
                </LinearLayout>
            </LinearLayout>
            <!--..................3.....................................-->
            <LinearLayout
                android:background="#ffffff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">
                <LinearLayout
                    android:paddingRight="10dp"
                    android:paddingLeft="10dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RelativeLayout
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/setup_storage"/>
                        <CheckBox
                            android:layout_alignParentRight="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </RelativeLayout>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#ededed"/>
                    <RelativeLayout
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                       >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/setup_within"/>
                        <CheckBox
                            android:layout_alignParentRight="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </RelativeLayout>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#ededed"/>
                    <RelativeLayout
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/setup_outside"/>
                        <CheckBox
                            android:layout_alignParentRight="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </RelativeLayout>

                </LinearLayout>



            </LinearLayout>
            <!--..................4.....................................-->
            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#ffffff"
                    android:orientation="vertical"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="6dp"
                            android:text="@string/wifi"/>

                        <com.cl.view.widget.SwitchView
                            android:layout_width="50dp"
                            android:layout_height="20dp"
                            android:layout_alignParentRight="true"/>
                    </RelativeLayout>
                    <!--....................................-->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#ededed"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="6dp"
                            android:text="@string/setup_environment"/>

                        <com.cl.view.widget.SwitchView
                            android:layout_width="50dp"
                            android:layout_height="20dp"
                            android:layout_alignParentRight="true"/>
                    </RelativeLayout>
                    <!--....................................-->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#ededed"/>


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="6dp"
                            android:text="@string/setup_wifi"/>

                        <com.cl.view.widget.SwitchView
                            android:layout_width="50dp"
                            android:layout_height="20dp"
                            android:layout_alignParentRight="true"/>
                    </RelativeLayout>
                    <!--....................................-->
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>